# GenerativeAI-Cost-Estimator

./: .gitignore  README.md  TIMESTAMP_UPDATES.md  pyproject.toml  requirements.txt  start_ollama.sh
data/: .gitignore
notebooks/: 00_test_ollama_connection.ipynb  01_ingest_and_embed.ipynb  02_inference_and_question_generation.ipynb  03_reporting_and_visualization.ipynb  04_cost_sensitivity_analysis.ipynb  05_nolh_experimental_design.ipynb  05_nolh_experimental_design.ipynb.backup  06_diagnose_ollama_404.ipynb  07_dgx_spark_performance_monitoring.ipynb  08_pricing_break_even_analysis.ipynb
notebooks/results/: metrics.json
notebooks/results/experiments/: baseline_gemma3_1b_30docs_metrics.json  baseline_gemma3_1b_metrics.json  baseline_gemma3_4b_30docs_metrics.json  baseline_gemma3_4b_metrics.json  large_chunks_512_30docs_4b_metrics.json  large_chunks_512_30docs_metrics.json  large_chunks_512_4b_metrics.json  large_chunks_512_metrics.json  more_docs_20_4b_metrics.json  more_docs_20_metrics.json  more_docs_60_4b_metrics.json  more_docs_60_metrics.json  more_questions_30docs_4b_metrics.json  more_questions_30docs_metrics.json  more_questions_4b_metrics.json  more_questions_metrics.json  small_chunks_256_30docs_4b_metrics.json  small_chunks_256_30docs_metrics.json  small_chunks_256_4b_metrics.json  small_chunks_256_metrics.json  summary.csv
notebooks/results/experiments/nolh/: nolh_docs10_chunk1050_q7_metrics.json  (+207 more)
results/: .gitignore
src/: __init__.py  config.py  dgx_monitoring.py  ollama_client.py  pipeline.py  reporting.py  timing_metrics.py  token_accounting.py
(+353 files in other folders)
